--- a/.jshintrc
+++ b/.jshintrc
@@ -14,6 +14,6 @@
   "undef": true,
   "unused": false,
   "strict": false,
-  "predef": ["document", "PixiGame", "PIXI"],
+  "predef": ["document", "PixiGame", "PIXI", "p2", "window"],
   "-W097": false
 }
