added collision detection, score, player health, max enemies, end game scene

--- a/.jshintrc
+++ b/.jshintrc
@@ -15,5 +15,6 @@
   "unused": false,
   "strict": false,
   "predef": ["document", "PixiGame", "PIXI", "p2", "window"],
-  "-W097": false
+  "-W097": false,
+  "-W003": false
 }
