--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "howler": "~1.1.25",
     "modernizr": "~2.8.2",
     "pixi": ">=3.0.10",
-    "p2js": "~0.7.1"
+    "p2js": "~0.7.1",
+    "tween.js": "tweenjs#^16.3.4"
   }
 }
